# Grid2Bench

./: .gitignore  LICENSE  README.md  conf.ini  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: pylint.yml
configmanager/: __init__.py  configmanager.py
data/input/Expert_Agent/: dict_action_space.json  dict_attack_space.json  dict_env_modification_space.json  dict_observation_space.json
data/input/IEE_PPO_Agent/: dict_action_space.json  dict_attack_space.json  dict_env_modification_space.json  dict_observation_space.json
data/input/MazeRL_Agent/: dict_action_space.json  dict_attack_space.json  dict_env_modification_space.json  dict_observation_space.json
data/input/Tutor N-1(200 Actions)_Tutor/: dict_action_space.json  dict_attack_space.json  dict_env_modification_space.json  dict_observation_space.json
data/input/rte_case14_redisp_do_nothing_agent/: dict_action_space.json
docs/source/: conf.py  config.rst  configmanager.rst  contrib.rst  examples.rst  grid2bench.rst  index.rst  intro.rst  kpi.rst  modules.rst  rlbenchplot.rst  tables.rst
getting_started/: Getting_Started.ipynb
grid2bench/: AgentsAnalytics.py  EpisodeDataExtractor.py  EpisodesDataTransformer.py
notebooks/: Agents_Evaluation.ipynb  PPO_Agent_Plot_All_Episodes.ipynb  TestNotebook.ipynb
notebooks/.ipynb_checkpoints/: PPO_Agent_Plot_All_Episodes-checkpoint.ipynb
readtedocs/doctrees/: grid2bench.doctree  kpi.doctree  modules.doctree
readtedocs/html/: index.html  intro.html  py-modindex.html
rlbenchplot/: AgentsAnalytics.py  Agents_Analysis.py  BenchPlot.py  EpisodeDataExtractor.py  EpisodesDataTransformer.py  EpisodesPlot.py
rlbenchplot/configmanager/: __init__.py
temp/: BenchPlot.py  README.rst
tests/: test_AgentsAnalytics.py  test_EpisodeDataExtractor.py  test_EpisodesDataTransformer.py  test_EpisodesPlot.py  test_rlbenchplot.py
(+1307 files in other folders)
