[tool.poetry]
name = "grid2bench"
version = "0.2.0"
description = "this package is for benchmarking agents from the grid2op framework"
authors = ["Seif-Eddine ATTOUI <es_attoui@esi.dz>", "Fereshteh ASGARI <fereshteh.asgari@gmail.com>", "Milad LEYLI-ABADI <mleyliabadi@gmail.com>" ]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Grid2Op = "^1.6.4"
pylint = "^2.12.2"
jupyter = "^1.0.0"
numba = "^0.55.0"
Flat = "^0.3.2"
plotly = "^5.5.0"
dash = "^2.0.0"
matplotlib = "^3.5.1"
l2rpn-baselines = "^0.5.1"
qgrid = "^1.3.1"
Sphinx = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
